--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".entidad.RegistrarseActivity"/>
+        <activity android:name=".RegistrarseActivity" />
         <activity android:name=".MainActivity">
-
-
-
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".HomeActivity"></activity>
     </application>
 
 </manifest>
